# barra2-dl

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  ruamel.yaml.clib-0.2.8-cp312-cp312-win_amd64.whl  setup.cfg
.github/workflows/: test.yml
barra2_dl/: __init__.py  convert.py  download.py  downloader.py  downloaders.py  globals.py  helpers.py  helpers_geo.py  helpers_wind.py  mapping.py  merge.py  merger.py
docs/: conf.py  index.rst
docs/_templates/: badges.html  github.html  moreinfo.html
docs/pages/: barra2_dl.rst  modules.rst
scripts/: barra2_downloader_example.py  example_barra2_dl.ipynb  example_barra2_dl.py  example_barra2_download_point.py
tests/: test_convert.py  test_download.py  test_downloader.py  test_helpers.py  test_helpers_wind.py
tests/test_example/: test_some_function.py
