[tool.poetry]
name = "barra2-dl"
description = "A tool for downloading BARRA version 2 (BARRA2) atmospheric reanalysis data."
version = "0.1.0"
license = "CC-BY-4.0"

authors = ["akarich73 <61820266+akarich73@users.noreply.github.com>",]

readme = "README.md"

repository = "https://github.com/akarich73/barra2-dl"

keywords = ["downloader","barra2","atmospheric","reanlysis","wind"]

classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: Creative Commons Attribution 4.0 International",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
pathlib = "^1.0.1"
requests = "^2.32.3"
numpy = "^2.1.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8"

wemake-python-styleguide = "^0.18"
flake8-pytest-style = "^1.6"
nitpick = "^0.35"

pytest = "^8.0"
pytest-cov = "^4.1"
pytest-randomly = "^3.15"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1"
sphinx-autodoc-typehints = "^1.25"
m2r2 = "^0.3"
tomli = "^2.0"
doc8 = "^1.0"


[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
